--- a/index.html
+++ b/index.html
@@ -251,8 +251,7 @@
         </nav>
 
         <div class="profile">
-            <div class="profile-img-placeholder">👤</div>
-            <!-- Replace above with: <img src="your-photo.jpg" alt="Your Name" class="profile-img"> -->
+            <Replace above with: <img src="5.jpg" alt="Katharina Wille" class="profile-img">
             
             <div class="profile-info">
                 <div class="contact-info">
