--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         </nav>
 
         <div class="profile">
-            <Replace above with: <img src="5.jpg" alt="Katharina Wille" class="profile-img">
+            <img src="5.jpg" alt="Katharina Wille" class="profile-img">
             
             <div class="profile-info">
                 <p>Hello, I'm [Your Name]. I'm a PhD student in the Department of [Your Department] at [Your University] advised by Prof. [Advisor Name]. My work focuses on [your research area] and aims to [your research goals].</p>
