--- a/index.html
+++ b/index.html
@@ -240,16 +240,9 @@
     <div class="container">
         <header>
             <h1>Your Name</h1>
-            <p class="subtitle">PhD Student @ University • <em>Your motto here</em></p>
+            <p class="subtitle">PhD Student @ KTH Stockholm </p>
         </header>
-
-        <nav>
-            <a href="#about">About</a>
-            <a href="#publications">Publications</a>
-            <a href="cv.pdf" target="_blank">CV</a>
-            <a href="#news">News</a>
-        </nav>
-
+        
         <div class="profile">
             <img src="5.jpg" alt="Katharina Wille" class="profile-img">
             
@@ -261,7 +254,6 @@
                 <div class="social-links">
                     <a href="#">google scholar</a>
                     <a href="#">github</a>
-                    <-- <a href="#">linkedin</a> -->
                 </div>
             </div>
         </div>
