--- a/index.html
+++ b/index.html
@@ -241,17 +241,16 @@
     <div class="container">
         <header>
             <h1>Katharina Wille</h1>
-            <p class="subtitle">PhD Student @ KTH Stockholm</p>
+            <p class="subtitle">PhD Student @ KTH Royal Institute of Technology</p>
             <div class="header-links">
-                <a href="#" target="_blank">Google Scholar</a>
-                <a href="#" target="_blank">ORCID</a>
-                <a href="#" target="_blank">ResearchGate</a>
+                <a href="#" target="https://scholar.google.com/citations?user=6oFyU0IAAAAJ&hl=en">Google Scholar</a>
+                <a href="#" target="https://orcid.org/0009-0007-9825-8999">ORCID</a>
             </div>
         </header>
         
         <div class="profile">
             <div class="profile-info">
-                <p>I'm a PhD student in the Department of [Your Department] at [Your University] advised by Prof. [Advisor Name]. My work focuses on [your research area] and aims to [your research goals].</p>
+                <p>I'm a PhD student in the Department of Department of Speech, Music and Hearing at KTH Royal Institute of Technology. My research focuses on [your research area] and aims to [your research goals].</p>
             </div>
             <img src="5.jpg" alt="Katharina Wille" class="profile-img">
         </div>
@@ -260,8 +259,6 @@
             <h2>publications</h2>
             
             <div class="publication">
-                <div class="pub-image-placeholder"></div>
-                <!-- Replace with: <img src="paper1-preview.png" alt="Paper preview" class="pub-image"> -->
                 <div class="pub-content">
                     <h3>Your Paper Title Goes Here: Making It Interesting and Descriptive</h3>
                     <p class="pub-authors"><strong>Your Name</strong>, Coauthor One, Coauthor Two, and Coauthor Three</p>
