--- a/index.html
+++ b/index.html
@@ -260,14 +260,11 @@
             
             <div class="publication">
                 <div class="pub-content">
-                    <h3>Your Paper Title Goes Here: Making It Interesting and Descriptive</h3>
+                    <h3>A Cockpit for the Development and Evaluation of Autonomous Database Systems/h3>
                     <p class="pub-authors"><strong>Your Name</strong>, Coauthor One, Coauthor Two, and Coauthor Three</p>
-                    <p class="pub-venue">Conference/Journal Name, 2025</p>
+                    <p class="pub-venue">2021 IEEE 37th International Conference on Data Engineering (ICDE)</p>
                     <div class="pub-links">
-                        <a href="#">arXiv</a>
-                        <a href="#">PDF</a>
-                        <a href="#">Code</a>
-                        <a href="#">Website</a>
+                        <a href="#" target="http://dx.doi.org/10.1109/icde51399.2021.00304">arXiv</a>
                     </div>
                 </div>
             </div>
