--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
             <h1>Katharina Wille</h1>
             <p class="subtitle">PhD Student @ KTH Royal Institute of Technology</p>
             <div class="header-links">
-                <a href="#" target="https://scholar.google.com/citations?user=6oFyU0IAAAAJ&hl=en">Google Scholar</a>
-                <a href="#" target="https://orcid.org/0009-0007-9825-8999">ORCID</a>
+                <a href="https://scholar.google.com/citations?user=6oFyU0IAAAAJ&hl=en" target="_blank">Google Scholar</a>
+                <a href="https://orcid.org/0009-0007-9825-8999" target="_blank">ORCID</a>
             </div>
         </header>
         
@@ -260,8 +260,8 @@
             
             <div class="publication">
                 <div class="pub-content">
-                    <h3>A Cockpit for the Development and Evaluation of Autonomous Database Systems/h3>
-                    <p class="pub-authors"><strong>Your Name</strong>, Coauthor One, Coauthor Two, and Coauthor Three</p>
+                    <h3>A Cockpit for the Development and Evaluation of Autonomous Database Systems</h3>
+                    <p class="pub-authors"> Jan Kossmann et. al.</p>
                     <p class="pub-venue">2021 IEEE 37th International Conference on Data Engineering (ICDE)</p>
                     <div class="pub-links">
                         <a href="#" target="http://dx.doi.org/10.1109/icde51399.2021.00304">arXiv</a>
@@ -272,13 +272,11 @@
             <div class="publication">
                 <div class="pub-image-placeholder"></div>
                 <div class="pub-content">
-                    <h3>Another Important Paper Title About Your Research Area</h3>
-                    <p class="pub-authors">Coauthor One, <strong>Your Name</strong>, and Coauthor Two</p>
-                    <p class="pub-venue">Another Conference/Journal, 2024</p>
+                    <h3>Absence of Systematic Effects of Internalizing Psychopathology on Learning Under Uncertainty</h3>
+                    <p class="pub-authors">Muhammad H Satti; Katharina Wille; Matthew R Nassar; Radoslaw M Cichy; Nicolas W Schuck; Peter Dayan; Rasmus Bruckner</p>
+                    <p class="pub-venue">Preprint</p>
                     <div class="pub-links">
-                        <a href="#">arXiv</a>
-                        <a href="#">PDF</a>
-                        <a href="#">Video</a>
+                        <a href="https://elifesciences.org/reviewed-preprints/107611v1">eLife</a>
                     </div>
                 </div>
             </div>
