--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         
         <div class="profile">
             <div class="profile-info">
-                <p>I'm a PhD student in the Department of Department of Speech, Music and Hearing at KTH Royal Institute of Technology. My research focuses on [your research area] and aims to [your research goals].</p>
+                <p>My research examines how LLM‑powered social robots influence critical thinking, trust, and persuasion in educational and decision‑making contexts by increasing transparency through multimodal certainty and uncertainty cues, using structured argumentation to help learners evaluate information critically, and exploring how embodiment and demographic factors shape these processes to support the development of more capable, socially responsive robots.</p>
             </div>
             <img src="5.jpg" alt="Katharina Wille" class="profile-img">
         </div>
@@ -261,7 +261,7 @@
             <div class="publication">
                 <div class="pub-content">
                     <h3>A Cockpit for the Development and Evaluation of Autonomous Database Systems</h3>
-                    <p class="pub-authors"> Jan Kossmann et. al.</p>
+                    <p class="pub-authors">Jan Kossmann; Martin Boissier; Alexander Dubrawski; Fabian Heseding; Caterina Mandel; Udo Pigorsch; Max Schneider; Til Schniese; Mona Sobhani; Petr Tsayun et al.</p>
                     <p class="pub-venue">2021 IEEE 37th International Conference on Data Engineering (ICDE)</p>
                     <div class="pub-links">
                         <a href="#" target="http://dx.doi.org/10.1109/icde51399.2021.00304">arXiv</a>
