--- a/index.html
+++ b/index.html
@@ -271,23 +271,22 @@
             
             <div class="publication">
                 <div class="pub-content">
-                    <h3>Absence of Systematic Effects of Internalizing Psychopathology on Learning Under Uncertainty</h3>
-                    <p class="pub-authors">Muhammad H Satti; Katharina Wille; Matthew R Nassar; Radoslaw M Cichy; Nicolas W Schuck; Peter Dayan; Rasmus Bruckner</p>
-                    <p class="pub-venue">Preprint</p>
+                    <h3>Risk-Taking Behavior in Human-Robot Teams: Collaboration vs. Competition</h3>
+                    <p class="pub-authors"><strong>Katharina Wille</strong>Eva Wiese, Jairo Perez-Osorio</p>
+                    <p class="pub-venue">Proceedings of the 21st ACM/IEEE International Conference on Human-Robot Interaction (HRI ’26)</p>
                     <div class="pub-links">
-                        <a href="https://elifesciences.org/reviewed-preprints/107611v1">eLife</a>
+                        <a href="#">PDF</a>
                     </div>
                 </div>
             </div>
-            
+
             <div class="publication">
                 <div class="pub-content">
-                    <h3>Earlier Work on Related Topic With Interesting Results</h3>
-                    <p class="pub-authors"><strong>Your Name</strong> and Advisor Name</p>
-                    <p class="pub-venue">Workshop/Journal Name, 2023</p>
+                    <h3>Absence of Systematic Effects of Internalizing Psychopathology on Learning Under Uncertainty</h3>
+                    <p class="pub-authors">Muhammad H Satti; <strong>Katharina Wille</strong> Matthew R Nassar; Radoslaw M Cichy; Nicolas W Schuck; Peter Dayan; Rasmus Bruckner</p>
+                    <p class="pub-venue">Preprint</p>
                     <div class="pub-links">
-                        <a href="#">PDF</a>
-                        <a href="#">Slides</a>
+                        <a href="https://elifesciences.org/reviewed-preprints/107611v1">eLife</a>
                     </div>
                 </div>
             </div>
