--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                     <p class="pub-authors"><strong>Katharina Wille</strong>Eva Wiese, Jairo Perez-Osorio</p>
                     <p class="pub-venue">Proceedings of the 21st ACM/IEEE International Conference on Human-Robot Interaction (HRI ’26)</p>
                     <div class="pub-links">
-                        <a href="#">PDF</a>
+                        <a href="https://scholar.google.com/citations?hl=en&user=6oFyU0IAAAAJ">Google Scholar</a>
                     </div>
                 </div>
             </div>
