--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <div class="publication">
                 <div class="pub-content">
                     <h3>Risk-Taking Behavior in Human-Robot Teams: Collaboration vs. Competition</h3>
-                    <p class="pub-authors"><strong>Katharina Wille</strong>Eva Wiese, Jairo Perez-Osorio</p>
+                    <p class="pub-authors"><strong>Katharina Wille</strong>, Eva Wiese, Jairo Perez-Osorio</p>
                     <p class="pub-venue">Proceedings of the 21st ACM/IEEE International Conference on Human-Robot Interaction (HRI ’26)</p>
                     <div class="pub-links">
                         <a href="https://scholar.google.com/citations?hl=en&user=6oFyU0IAAAAJ">Google Scholar</a>
@@ -283,7 +283,7 @@
             <div class="publication">
                 <div class="pub-content">
                     <h3>Absence of Systematic Effects of Internalizing Psychopathology on Learning Under Uncertainty</h3>
-                    <p class="pub-authors">Muhammad H Satti; <strong>Katharina Wille</strong> Matthew R Nassar; Radoslaw M Cichy; Nicolas W Schuck; Peter Dayan; Rasmus Bruckner</p>
+                    <p class="pub-authors">Muhammad H Satti; <strong>Katharina Wille,</strong> Matthew R Nassar; Radoslaw M Cichy; Nicolas W Schuck; Peter Dayan; Rasmus Bruckner</p>
                     <p class="pub-venue">Preprint</p>
                     <div class="pub-links">
                         <a href="https://elifesciences.org/reviewed-preprints/107611v1">eLife</a>
