--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                     <p class="pub-authors">Jan Kossmann; Martin Boissier; Alexander Dubrawski; Fabian Heseding; Caterina Mandel; Udo Pigorsch; Max Schneider; Til Schniese; Mona Sobhani; Petr Tsayun et al.</p>
                     <p class="pub-venue">2021 IEEE 37th International Conference on Data Engineering (ICDE)</p>
                     <div class="pub-links">
-                        <a href="#" target="http://dx.doi.org/10.1109/icde51399.2021.00304">arXiv</a>
+                        <a href="http://dx.doi.org/10.1109/icde51399.2021.00304" target="_blank>IEEE</a>
                     </div>
                 </div>
             </div>
