--- a/index.html
+++ b/index.html
@@ -250,14 +250,14 @@
         
         <div class="profile">
             <div class="profile-info">
-                <p>My research examines how LLM‑powered social robots influence critical thinking, trust, and persuasion in educational and decision‑making contexts by increasing transparency through multimodal certainty and uncertainty cues, using structured argumentation to help learners evaluate information critically, and exploring how embodiment and demographic factors shape these processes to support the development of more capable, socially responsive robots.</p>
+                <p>I'm a PhD student in the Department of Speech, Music and Hearing at KTH Royal Institute of Technology. My research examines how LLM‑powered social robots influence critical thinking, trust, and persuasion in educational and decision‑making contexts by increasing transparency through multimodal certainty and uncertainty cues, using structured argumentation to help learners evaluate information critically, and exploring how embodiment and demographic factors shape these processes to support the development of more capable, socially responsive robots.</p>
             </div>
             <img src="5.jpg" alt="Katharina Wille" class="profile-img">
         </div>
 
         <section id="publications">
             <h2>publications</h2>
-            
+
             <div class="publication">
                 <div class="pub-content">
                     <h3>A Cockpit for the Development and Evaluation of Autonomous Database Systems</h3>
