--- a/index.html
+++ b/index.html
@@ -257,13 +257,15 @@
 
         <section id="publications">
             <h2>publications</h2>
-
+            
             <div class="publication">
                 <div class="pub-content">
                     <h3>A Cockpit for the Development and Evaluation of Autonomous Database Systems</h3>
                     <p class="pub-authors">Jan Kossmann; Martin Boissier; Alexander Dubrawski; Fabian Heseding; Caterina Mandel; Udo Pigorsch; Max Schneider; Til Schniese; Mona Sobhani; Petr Tsayun et al.</p>
                     <p class="pub-venue">2021 IEEE 37th International Conference on Data Engineering (ICDE)</p>
-                    <a href="http://dx.doi.org/10.1109/icde51399.2021.00304" target="_blank>IEEE</a>
+                    <div class="pub-links">
+                        <a href="http://dx.doi.org/10.1109/icde51399.2021.00304" target="_blank>IEEE</a>
+                    </div>
                 </div>
             </div>
             
