--- a/index.html
+++ b/index.html
@@ -260,20 +260,9 @@
             
             <div class="publication">
                 <div class="pub-content">
-                    <h3>A Cockpit for the Development and Evaluation of Autonomous Database Systems</h3>
-                    <p class="pub-authors">Kossmann, Jan and Boissier, Martin and Dubrawski, Alexander and Heseding, Fabian and Mandel, Caterina and Pigorsch, Udo and Schneider, Max and Schniese, Til and Sobhani, Mona and Tsayun, Petr and <strong>Wille, Katharina</strong> and Perscheid, Michael and Uflacker, Matthias and Plattner, Hasso</p>
-                    <p class="pub-venue">2021 IEEE 37th International Conference on Data Engineering (ICDE)</p>
-                    <div class="pub-links">
-                        <a href="http://dx.doi.org/10.1109/icde51399.2021.00304" target="_blank>IEEE</a>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="publication">
-                <div class="pub-content">
                     <h3>Risk-Taking Behavior in Human-Robot Teams: Collaboration vs. Competition</h3>
                     <p class="pub-authors"><strong>Katharina Wille</strong>, Eva Wiese, Jairo Perez-Osorio</p>
-                    <p class="pub-venue">Proceedings of the 21st ACM/IEEE International Conference on Human-Robot Interaction (HRI ’26)</p>
+                    <p class="pub-venue">Proceedings of the 21st ACM/IEEE International Conference on Human-Robot Interaction (HRI '26)</p>
                     <div class="pub-links">
                         <a href="https://scholar.google.com/citations?hl=en&user=6oFyU0IAAAAJ">Google Scholar</a>
                     </div>
@@ -286,7 +275,18 @@
                     <p class="pub-authors">Muhammad H Satti; <strong>Katharina Wille,</strong> Matthew R Nassar; Radoslaw M Cichy; Nicolas W Schuck; Peter Dayan; Rasmus Bruckner</p>
                     <p class="pub-venue">Preprint</p>
                     <div class="pub-links">
-                        <a href="https://elifesciences.org/reviewed-preprints/107611v1">eLife</a>
+                        <a href="https://elifesciences.org/reviewed-preprints/107611v1" target="_blank">eLife</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="publication">
+                <div class="pub-content">
+                    <h3>A Cockpit for the Development and Evaluation of Autonomous Database Systems</h3>
+                    <p class="pub-authors">Kossmann, Jan and Boissier, Martin and Dubrawski, Alexander and Heseding, Fabian and Mandel, Caterina and Pigorsch, Udo and Schneider, Max and Schniese, Til and Sobhani, Mona and Tsayun, Petr and <strong>Wille, Katharina</strong> and Perscheid, Michael and Uflacker, Matthias and Plattner, Hasso</p>
+                    <p class="pub-venue">2021 IEEE 37th International Conference on Data Engineering (ICDE)</p>
+                    <div class="pub-links">
+                        <a href="http://dx.doi.org/10.1109/icde51399.2021.00304" target="_blank>IEEE</a>
                     </div>
                 </div>
             </div>
