--- a/index.html
+++ b/index.html
@@ -250,13 +250,14 @@
         
         <div class="profile">
             <div class="profile-info">
-                <p>I'm a PhD student in the Department of Speech, Music and Hearing at KTH Royal Institute of Technology. My research examines how LLM‑powered social robots influence critical thinking, trust, and persuasion in educational and decision‑making contexts by increasing transparency through multimodal certainty and uncertainty cues, using structured argumentation to help learners evaluate information critically, and exploring how embodiment and demographic factors shape these processes to support the development of more capable, socially responsive robots.</p>
+                <p>I'm a PhD student in the Department of Speech, Music and Hearing at KTH Royal Institute of Technology. 
+                My research examines how LLM‑powered social robots influence critical thinking, trust, and persuasion in educational and decision‑making contexts by increasing transparency through multimodal certainty and uncertainty cues, using structured argumentation to help learners evaluate information critically, and exploring how embodiment and demographic factors shape these processes to support the development of more capable, socially responsive robots.</p>
             </div>
             <img src="5.jpg" alt="Katharina Wille" class="profile-img">
         </div>
 
         <section id="publications">
-            <h2>publications</h2>
+            <h2>Publications</h2>
             
             <div class="publication">
                 <div class="pub-content">
@@ -264,7 +265,7 @@
                     <p class="pub-authors"><strong>Katharina Wille</strong>, Eva Wiese, Jairo Perez-Osorio</p>
                     <p class="pub-venue">Proceedings of the 21st ACM/IEEE International Conference on Human-Robot Interaction (HRI '26)</p>
                     <div class="pub-links">
-                        <a href="https://scholar.google.com/citations?hl=en&user=6oFyU0IAAAAJ">Google Scholar</a>
+                        <a href="https://osf.io/zxtku/overview">Google Scholar</a>
                     </div>
                 </div>
             </div>
@@ -272,7 +273,7 @@
             <div class="publication">
                 <div class="pub-content">
                     <h3>Absence of Systematic Effects of Internalizing Psychopathology on Learning Under Uncertainty</h3>
-                    <p class="pub-authors">Muhammad H Satti; <strong>Katharina Wille,</strong> Matthew R Nassar; Radoslaw M Cichy; Nicolas W Schuck; Peter Dayan; Rasmus Bruckner</p>
+                    <p class="pub-authors">Muhammad H Satti, <strong>Katharina Wille,</strong> Matthew R Nassar, Radoslaw M Cichy, Nicolas W Schuck, Peter Dayan, Rasmus Bruckner</p>
                     <p class="pub-venue">Preprint</p>
                     <div class="pub-links">
                         <a href="https://elifesciences.org/reviewed-preprints/107611v1" target="_blank">eLife</a>
@@ -283,7 +284,7 @@
             <div class="publication">
                 <div class="pub-content">
                     <h3>A Cockpit for the Development and Evaluation of Autonomous Database Systems</h3>
-                    <p class="pub-authors">Kossmann, Jan and Boissier, Martin and Dubrawski, Alexander and Heseding, Fabian and Mandel, Caterina and Pigorsch, Udo and Schneider, Max and Schniese, Til and Sobhani, Mona and Tsayun, Petr and <strong>Wille, Katharina</strong> and Perscheid, Michael and Uflacker, Matthias and Plattner, Hasso</p>
+                    <p class="pub-authors">Jan Kossmann, Martin Boissier, Alexander Dubrawski, Fabian Heseding, Caterina Mandel, Udo Pigorsch, Max Schneider, Til Schniese, Mona Sobhani, Petr Tsayun, <strong>Katharina Wille</strong> Michael Perscheid, Matthias Uflacker, Hasso Plattner</p>
                     <p class="pub-venue">2021 IEEE 37th International Conference on Data Engineering (ICDE)</p>
                     <div class="pub-links">
                         <a href="http://dx.doi.org/10.1109/icde51399.2021.00304" target="_blank>IEEE</a>
