--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     <p class="pub-authors"><strong>Katharina Wille</strong>, Eva Wiese, Jairo Perez-Osorio</p>
                     <p class="pub-venue">Proceedings of the 21st ACM/IEEE International Conference on Human-Robot Interaction (HRI '26)</p>
                     <div class="pub-links">
-                        <a href="https://osf.io/zxtku/overview">Google Scholar</a>
+                        <a href="https://osf.io/zxtku/overview">OSF</a>
                     </div>
                 </div>
             </div>
@@ -274,7 +274,7 @@
                 <div class="pub-content">
                     <h3>Absence of Systematic Effects of Internalizing Psychopathology on Learning Under Uncertainty</h3>
                     <p class="pub-authors">Muhammad H Satti, <strong>Katharina Wille,</strong> Matthew R Nassar, Radoslaw M Cichy, Nicolas W Schuck, Peter Dayan, Rasmus Bruckner</p>
-                    <p class="pub-venue">Preprint</p>
+                    <p class="pub-venue">eLife</p>
                     <div class="pub-links">
                         <a href="https://elifesciences.org/reviewed-preprints/107611v1" target="_blank">eLife</a>
                     </div>
