--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
         /* Footer */
         footer {
-            margin-top: 60px;
+            margin-top: 80px;
             padding-top: 20px;
             border-top: 1px solid #e0e0e0;
             font-size: 0.85rem;
@@ -250,8 +250,8 @@
         
         <div class="profile">
             <div class="profile-info">
-                <p>I'm a PhD student in the Department of Speech, Music and Hearing at KTH Royal Institute of Technology.</p> 
-                <p></p>My research examines how LLM‑powered social robots influence critical thinking, trust, and persuasion in educational and decision‑making contexts by increasing transparency through multimodal certainty and uncertainty cues, using structured argumentation to help learners evaluate information critically, and exploring how embodiment and demographic factors shape these processes to support the development of more capable, socially responsive robots.</p>
+                <p>I'm a PhD student in the Department of Speech, Music and Hearing at KTH Royal Institute of Technology. 
+                My research examines how LLM‑powered social robots influence critical thinking, trust, and persuasion in educational and decision‑making contexts by increasing transparency through multimodal certainty and uncertainty cues, using structured argumentation to help learners evaluate information critically, and exploring how embodiment and demographic factors shape these processes to support the development of more capable, socially responsive robots.</p>
             </div>
             <img src="5.jpg" alt="Katharina Wille" class="profile-img">
         </div>
@@ -265,7 +265,7 @@
                     <p class="pub-authors"><strong>Katharina Wille</strong>, Eva Wiese, Jairo Perez-Osorio</p>
                     <p class="pub-venue">Proceedings of the 21st ACM/IEEE International Conference on Human-Robot Interaction (HRI '26)</p>
                     <div class="pub-links">
-                        <a href="https://osf.io/zxtku/overview">OSF</a>
+                        <a href="https://osf.io/zxtku/overview" target="_blank">OSF</a>
                     </div>
                 </div>
             </div>
@@ -273,7 +273,7 @@
             <div class="publication">
                 <div class="pub-content">
                     <h3>Absence of Systematic Effects of Internalizing Psychopathology on Learning Under Uncertainty</h3>
-                    <p class="pub-authors">Muhammad H Satti, <strong>Katharina Wille,</strong> Matthew R Nassar, Radoslaw M Cichy, Nicolas W Schuck, Peter Dayan, Rasmus Bruckner</p>
+                    <p class="pub-authors">Muhammad H Satti, <strong>Katharina Wille</strong>, Matthew R Nassar, Radoslaw M Cichy, Nicolas W Schuck, Peter Dayan, Rasmus Bruckner</p>
                     <p class="pub-venue">eLife</p>
                     <div class="pub-links">
                         <a href="https://elifesciences.org/reviewed-preprints/107611v1" target="_blank">eLife</a>
@@ -284,10 +284,10 @@
             <div class="publication">
                 <div class="pub-content">
                     <h3>A Cockpit for the Development and Evaluation of Autonomous Database Systems</h3>
-                    <p class="pub-authors">Jan Kossmann, Martin Boissier, Alexander Dubrawski, Fabian Heseding, Caterina Mandel, Udo Pigorsch, Max Schneider, Til Schniese, Mona Sobhani, Petr Tsayun, <strong>Katharina Wille</strong> Michael Perscheid, Matthias Uflacker, Hasso Plattner</p>
+                    <p class="pub-authors">Jan Kossmann, Martin Boissier, Alexander Dubrawski, Fabian Heseding, Caterina Mandel, Udo Pigorsch, Max Schneider, Til Schniese, Mona Sobhani, Petr Tsayun, <strong>Katharina Wille</strong>, Michael Perscheid, Matthias Uflacker, Hasso Plattner</p>
                     <p class="pub-venue">2021 IEEE 37th International Conference on Data Engineering (ICDE)</p>
                     <div class="pub-links">
-                        <a href="http://dx.doi.org/10.1109/icde51399.2021.00304" target="_blank>IEEE</a>
+                        <a href="http://dx.doi.org/10.1109/icde51399.2021.00304" target="_blank">IEEE</a>
                     </div>
                 </div>
             </div>
@@ -295,7 +295,7 @@
         </section>
 
         <footer>
-            <p style="margin-top: 10px;">© Copyright 2025 Katharina Wille. Last updated: January 29, 2025.</p>
+            <p>© Copyright 2025 Katharina Wille. Last updated: January 29, 2025.</p>
         </footer>
     </div>
 </body>
