--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
             <div class="header-links">
                 <a href="https://scholar.google.com/citations?user=6oFyU0IAAAAJ&hl=en" target="_blank">Google Scholar</a>
                 <a href="https://orcid.org/0009-0007-9825-8999" target="_blank">ORCID</a>
+                <a href="https://www.kth.se/profile/kwille?l=en" target="_blank">KTH</a>
             </div>
         </header>
         
