--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
         
         <div class="profile">
             <div class="profile-info">
-                <p>I'm a PhD student in the Department of Speech, Music and Hearing at KTH Royal Institute of Technology. 
-                My research examines how LLM‑powered social robots influence critical thinking, trust, and persuasion in educational and decision‑making contexts by increasing transparency through multimodal certainty and uncertainty cues, using structured argumentation to help learners evaluate information critically, and exploring how embodiment and demographic factors shape these processes to support the development of more capable, socially responsive robots.</p>
+                <p>I'm a PhD student in the Department of Speech, Music and Hearing at KTH Royal Institute of Technology.</p>
+                <p>My research examines how LLM‑powered social robots influence critical thinking, trust, and persuasion in educational and decision‑making contexts by increasing transparency through multimodal certainty and uncertainty cues, using structured argumentation to help learners evaluate information critically, and exploring how embodiment and demographic factors shape these processes to support the development of more capable, socially responsive robots.</p>
             </div>
             <img src="5.jpg" alt="Katharina Wille" class="profile-img">
         </div>
@@ -266,7 +266,7 @@
                     <p class="pub-authors"><strong>Katharina Wille</strong>, Eva Wiese, Jairo Perez-Osorio</p>
                     <p class="pub-venue">Proceedings of the 21st ACM/IEEE International Conference on Human-Robot Interaction (HRI '26)</p>
                     <div class="pub-links">
-                        <a href="https://osf.io/zxtku/overview" target="_blank">OSF</a>
+                        <a href="https://osf.io/zxtku/overview" target="_blank">OSF Project</a>
                     </div>
                 </div>
             </div>
